--- a/app/views/pages/daylight.html.erb
+++ b/app/views/pages/daylight.html.erb
@@ -3,8 +3,13 @@
 
 <div id="daylight-app">
   <div class="row">
-    <div class="box col-md-3 col-md-offset-1">Morning</div>
-    <div class="box col-md-3 col-md-offset-1">Afternoon</div>
-    <div class="box col-md-3 col-md-offset-1">Evening</div>
+    <div class="box col-md-3 col-md-offset-1" onclick="teeHee(this)">Morning</div>
+    <div class="box col-md-3 col-md-offset-1" onclick="teeHee(this)">Afternoon</div>
+    <div class="box col-md-3 col-md-offset-1" onclick="teeHee(this)">Evening</div>
+    <div id="change" class="box col-md-3 col-md-offset-1" align="center"> Hello   </div>
   </div>
+  
+
 </div>
+<br>
+  
