--- a/app/views/pages/interact.html.erb
+++ b/app/views/pages/interact.html.erb
@@ -3,7 +3,7 @@
 <div id="interact">
   <div class="row">
     <div class="block col-md-3" onclick="changeColor(this)"> </div><br>
-    <div id="textbox" class="block col-md-3" onclick="addText(this)"> </div><br>
+    <div id="textbox" class="block col-md-3" onclick="addText()"> </div><br>
     <div class="block col-md-3" onclick="addClass(this)"> </div>
     <div class="block col-md-3" onclick="readText()"> </div>
   </div>
