--- a/app/views/pages/three.html.erb
+++ b/app/views/pages/three.html.erb
@@ -2,12 +2,12 @@
 
 <div id="three-box-game">
   <div class="row">
+    <div class="col-md-1" > </div>
+    <div class="box col-md-3" onclick="allThree(1)"> </div>
     <div class="col-md-1"> </div>
-    <div class="box col-md-3 "> </div>
+    <div class="box col-md-3" onclick="allThree(2)"> </div>
     <div class="col-md-1"> </div>
-    <div class="box col-md-3"> </div>
-    <div class="col-md-1"> </div>
-    <div class="box col-md-3"> </div>
+    <div class="box col-md-3" onclick="allThree(3)"> </div>
   </div>
   
 </div>
